--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
         }
 
         body {
-            min-height: 100vh;
-            display: grid;
-            place-items: center;
-            perspective: 100vmin;
-            overflow: hidden;
-            font-family: 'Fredoka', sans-serif;
-            margin: 0;
-        }
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+    perspective: 100vmin;
+    overflow-y: auto; /* ✅ Ahora permite scroll vertical */
+    overflow-x: hidden; /* Mantiene oculto el scroll horizontal */
+    font-family: 'Fredoka', sans-serif;
+    margin: 0;
+}
 
         /* Contenedor con desenfoque */
         .background-container {
@@ -123,7 +124,19 @@
         .modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(10, 10, 20, 0.8); display: none; justify-content: center; align-items: center; z-index: 1000; backdrop-filter: blur(8px); animation: fadeIn 0.5s ease; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        .modal-content { background: linear-gradient(145deg, #9f9aff, #9c35f6); padding: 1rem; border-radius: 20px; text-align: center; max-width: 90%; width: 500px; box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5); position: relative; animation: modalSlideIn 0.7s cubic-bezier(0.16, 1, 0.3, 1); }
+        .modal-content {
+    background: linear-gradient(145deg, #9f9aff, #9c35f6);
+    padding: 1rem;
+    border-radius: 20px;
+    text-align: center;
+    max-width: 90%;
+    width: 500px;
+    max-height: 80vh; /* ✅ límite en altura */
+    overflow-y: auto; /* ✅ scroll interno solo en el modal */
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+    position: relative;
+    animation: modalSlideIn 0.7s cubic-bezier(0.16, 1, 0.3, 1);
+}
         @keyframes modalSlideIn { from { transform: translateY(50px) scale(0.9); opacity: 0; } to { transform: translateY(0) scale(1); opacity: 1; } }
 
         .modal-frame { padding: 2.5rem 2rem; border-radius: 15px; position: relative; overflow: hidden; box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5); }
